unpackaged/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>WEX Project Milestone.

Used to track project milestones.</description>
    <label>Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>