unpackaged/main/default/objects/Milestone__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Milestone Due Date</description>
    <inlineHelpText>Milestone Due Date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>