unpackaged/main/default/objects/Milestone__c/fields/Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Complete__c</fullName>
    <description>Total Completion Percentage based on related issue records.</description>
    <formula>IF(
 Total_Number_of_Issues__c  &gt; 0,
(Total_Number_of_Completed_Issues__c / Total_Number_of_Issues__c),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Completion Percentage based on related issue records.</inlineHelpText>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>