unpackaged/main/default/objects/Milestone__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>The associated project for this project milestone.</description>
    <inlineHelpText>The associated project for this project milestone.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Milestones</relationshipLabel>
    <relationshipName>Project_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>