unpackaged/main/default/objects/Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Percentage_Complete__c  &lt;= 0, &quot;Not Started&quot;, 
   IF(Percentage_Complete__c &gt;= 1, &quot;Complete&quot;, 
      &quot;In Progress&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>