unpackaged/main/default/objects/Milestone__c/fields/Total_Number_of_Completed_Issues__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Completed_Issues__c</fullName>
    <description>Summarise the total number of completed issues related to this Milestone.</description>
    <inlineHelpText>Summarised total number of completed issues related to this Milestone.</inlineHelpText>
    <label>Total Number of Completed Issues</label>
    <summaryFilterItems>
        <field>Issue__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Issue__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>