unpackaged/main/default/objects/Milestone__c/fields/Total_Number_of_Issues__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Issues__c</fullName>
    <description>Summarise the total number of Issues related to this Milestone.</description>
    <inlineHelpText>Summarised count of the total number of Issues related to this Milestone.</inlineHelpText>
    <label>Total Number of Issues</label>
    <summaryForeignKey>Issue__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>